Proyecto consumo API Rest v2.0

--- a/index.html
+++ b/index.html
@@ -32,20 +32,31 @@
                             <img class="img--large" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/2x1_SuperMarioHub_image1600w.jpg" alt="marion-icon" id="marioImg">
                         </figure>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" id="frontCard">
                         <figure class="slide--figure">
                             <img class="img--large" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/2x1_AnimalCrossingHub_image1600w.jpg" alt="anima-icon" id="animalImg">
                         </figure>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" id="frontCard">
                         <figure class="slide--figure">
                             <img class="img--large" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/SI_Hub_Zelda_Portal_image1600w.jpg" alt="zelda-icon" id="zeldaImg">
                         </figure>
                     </div>
                 </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next" id="swiperNext"></div>
+            <div class="swiper-button-prev" id="swiperPrev"></div>
             </div>
+        </article>
+        <article class="containerMobile" id="mobileContainer">
+            <figure class="containerMobile__figure">
+                <img class="img--large" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/2x1_SuperMarioHub_image1600w.jpg" alt="mario-mobile-icon" id="marioImgMobile">
+            </figure>
+            <figure class="containerMobile__figure">
+                <img class="img--large" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/2x1_AnimalCrossingHub_image1600w.jpg" alt="anima-mobile-icon" id="animalImgMobile">
+            </figure>
+            <figure class="containerMobile__figure">
+                <img class="img--large" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/SI_Hub_Zelda_Portal_image1600w.jpg" alt="zelda-mobile-icon" id="zeldaImgMobile">
+            </figure>
         </article>
     </main>
     <footer>
